Fixed z-index issue

--- a/app/view-components/calendar-view/_calendar-view.scss
+++ b/app/view-components/calendar-view/_calendar-view.scss
@@ -29,7 +29,7 @@ section {
   }
 }
 
-.ui-view-container {
+.ui-view-calendar {
   display: block;
   width: 100%;
   height: 100%;
